
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander
- GL   Guillaume Lelarge

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2007-11-28 DP  1.8.1  Fix pgAgent's job query when a host agent is specified
                      so that jobs don't execute every time round the loop
                      regardless of schedule, per Brian Kalbfus.
2007-11-28 DP  1.8.1  Add EnterpriseDB's default database (edb) to the Server
                      dialog's default option.
2007-11-28 DP  1.8.1  Don't allow the user to debug an EnterpriseDB package
                      function or procedure if the body isn't defined.
2007-11-28 DP  1.8.1  Don't offer the user the chance to create new columns
                      on system catalogues.
2007-11-28 DP  1.8.1  Fix the debugger to send actual NULL values rather than
                      'NULL' through the EnterpriseDB callable statement API.
                      Allow parameter values to be NULL or empty strings on 
                      both PostgreSQL and EnterpriseDB using the same syntax
                      as the Edit Grid.
2007-11-27 DP  1.8.1  Always open the PostgreSQL Help when selecting that menu
                      option, even if connected to EnterpriseDB. 
2007-11-27 DP  1.8.1  Fix EnterpriseDB public synonym loading so that they
                      aren't considered system objects.
2007-11-23 DP  1.9.0  Add an option to enable/disable rules on tables [Gullaume
                      Lelarge]
2007-11-23 DP  1.9.0  Add options to TRUNCATE and TRUNCATE...CASCADE tables.
                      [Guillaume Lelarge]
2007-11-23 DP  1.8.1  Fix path discovery on Unix so standard installs can be
                      relocated easily.