@@ -36,6 +36,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-11-30 DP  1.8.1  Don't offer package names and system schemas as schemas 
+                      when creating public synonyms.
 2007-11-28 DP  1.8.1  Fix pgAgent's job query when a host agent is specified
                       so that jobs don't execute every time round the loop
                       regardless of schedule, per Brian Kalbfus.
